Fixed not overflow problem

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -7,7 +7,7 @@
 html {
   height: 100vh;
   width: 100vw;
-  overflow-x: hidden; }
+  overflow-x: hidden !important; }
 
 body {
   height: 100vh;
